Added samba share for mounting ISO for SuperMicro servers, added commands to properly mount and boot an ISO for supermicroservers, modified REMOTE_INVENTORY_URL to REMOTE_SERVICE_URL parameter for creating ISO, REMOTE_SERVICE_URL part of the inventory/hosts file for easy modification of your environment

--- a/ansible-bm-install/README.adoc
+++ b/ansible-bm-install/README.adoc
@@ -242,6 +242,10 @@ cluster_name="openshift"
 # Contents of the pull-secret.txt file
 pull_secret="{{ lookup('file', './pull_secret.txt') }}"
 
+# Provide Remote Service URL and port
+#e.g. remote_service_url="http://example.com:6000
+remote_service_url=""
+
 # Version of the openshift-installer, undefined or empty results in the playbook failing.
 openshift_version="4.5"
 
@@ -295,6 +299,10 @@ cluster_name="openshift"
 
 # Contents of the pull-secret.txt file
 pull_secret="{{ lookup('file', './pull_secret.txt') }}"
+
+# Provide Remote Service URL and port
+#e.g. remote_service_url="http://example.com:6000
+remote_service_url=""
 
 # Version of the openshift-installer, undefined or empty results in the playbook failing.
 openshift_version="4.5"
